--- a/admin/frontend/src/pages/styles/home.css
+++ b/admin/frontend/src/pages/styles/home.css
@@ -9,6 +9,8 @@
   .Home-container {
     display: flex;
     flex-direction: column;
+    align-items: start;
+    justify-content: start;
     width: 100wh;
     height: 100vh;
 
